# YATDLM

./: .gitignore  Dockerfile  Makefile  README.md  docker-bootstrap.py  docker-compose.yml  pre-commit.py  pyproject.toml  requirements.txt
yatdlm/: manage.py
yatdlm/templates/todo/: base.html  index.html  list.html  login.html  task.html
yatdlm/todo/: admin.py  apps.py  factories.py  models.py  schemas.py  signals.py  templatetags.py  urls.py  utils.py  views.py
yatdlm/todo/categories/: factories.py  models.py  urls.py  views.py
yatdlm/todo/helpers/: routes_validators.py
yatdlm/todo/migrations/: 0001_initial.py  0002_auto_20171218_2015.py  0003_auto_20171218_2046.py  0004_auto_20171218_2047.py  0005_auto_20171218_2048.py  0006_auto_20171218_2055.py  0007_task_is_done.py  0008_auto_20171224_2357.py  0009_task_priority.py  0010_task_resolution_date.py  0011_todolist_owner.py  0012_task_owner.py  0013_auto_20180114_2114.py  0014_auto_20180116_0123.py  0015_followup.py  0016_followup_writer.py  0017_auto_20180118_0203.py  0018_auto_20180120_0953.py  0019_auto_20180120_0953.py  0020_auto_20180120_0954.py  0021_auto_20180120_1007.py  0022_auto_20180131_1829.py  0023_auto_20180213_1316.py  0024_todolist_is_public.py  0025_auto_20180219_0016.py  0026_task_task_no.py  0027_auto_20181224_1533.py  0028_auto_20200108_2242.py  0029_auto_20200229_1018.py  0030_task_todo_task_parent__f0e23a_idx_and_more.py  0031_task_todo_task_parent__02f2f8_idx.py  0032_alter_task_owner.py  0033_task_rejected.py  0034_task_unique_task_no_in_list.py
yatdlm/todo/static/: functions.js  list.js  xhr.js
yatdlm/todo/templatetags/: tags.py
yatdlm/yatdlm/: settings.py  urls.py  wsgi.py
(+20 files in other folders)
