[tool.poetry]
name = "yatdlm"
version = "0.1.0"
description = ""
authors = ["Kaci Adjou <adjou.kaci@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
django = ">=3.0.2"
psycopg2-binary = "^2.8.5"
Django = "^4.0.4"

[tool.poetry.dev-dependencies]
ipython = "^8.3.0"
pylint = ">=2.5.3"
django-debug-toolbar = "^3.4.0"
django-debug-toolbar-request-history = "^0.1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
